# QtAndroidTools

./: CMakeLists.txt
